# claude-public

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  agent-repo-search.plugin  cc-lens.plugin  code-review.plugin  commit.plugin  image-gen.plugin  llm-wiki.plugin  system-prompt-audit.plugin  token-efficiency.plugin
.claude-plugin/: marketplace.json  (+1 more)
plugins/context-os/: .gitignore  CLAUDE.md  FEEDBACK_REPORT.md  README.md  cli.mjs  interactive-review-server.py  package.json  pyproject.toml
plugins/context-os/.claude-plugin/: plugin.json
plugins/context-os/agents/: token-efficiency-analyzer.md
plugins/context-os/commands/: audit.md  cc-lens.md  doctor.md  improve.md  ingest-history.md  limits.md  quickstart.md
plugins/context-os/context_os/: __init__.py  __main__.py  analyze.py  cc_lens_url.py  ccusage_wrapper.py  context_os_cli.py  doctor.py  feedback_store.py  file_map.py  forensic_dashboard.py  generate_dashboard.py  graph.py  ingest_session.py  ingest_source.py  install.sh  limits.py  recommendations.py
plugins/context-os/eval/: README.md  eval_quickstart.py
plugins/context-os/examples/: sample-transcript.md
plugins/context-os/hooks/: README.md  auto-ingest.py  session-end.py  session-start.py  settings-snippet.json
plugins/context-os/scripts/: install.sh
plugins/context-os/skills/align-to-intent/: SKILL.md
plugins/context-os/skills/cc-lens/: SKILL.md
plugins/context-os/skills/ccusage/: SKILL.md
plugins/context-os/skills/context-audit/: SKILL.md
plugins/context-os/templates/: CLAUDE_MD_STARTER.md  node_template.md
(+101 files in other folders)
